PUG-124: Finish updating project domain on project module;